--- a/RougueLike/RougueLike.csproj
+++ b/RougueLike/RougueLike.csproj
@@ -42,6 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bag.cs" />
+    <Compile Include="Consumable.cs" />
+    <Compile Include="IFood.cs" />
+    <Compile Include="IStuffs.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Weapon.cs" />
+    <Compile Include="IHaveWeight.cs" />
+    <Compile Include="IAlive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
