--- a/RougueLike/RougueLike.csproj
+++ b/RougueLike/RougueLike.csproj
@@ -44,14 +44,18 @@
   <ItemGroup>
     <Compile Include="Bag.cs" />
     <Compile Include="Consumable.cs" />
+    <Compile Include="IamItem.cs" />
     <Compile Include="IFood.cs" />
     <Compile Include="IStuffs.cs" />
+    <Compile Include="Mob.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Tiles.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="IHaveWeight.cs" />
     <Compile Include="IAlive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
