--- a/RougueLike/RougueLike.csproj
+++ b/RougueLike/RougueLike.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Consumable.cs" />
     <Compile Include="IamItem.cs" />
     <Compile Include="IFood.cs" />
-    <Compile Include="IStuffs.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="Mob.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Tiles.cs" />
