--- a/RougueLikeRPG/RougueLikeRPG/RougueLikeRPG.csproj
+++ b/RougueLikeRPG/RougueLikeRPG/RougueLikeRPG.csproj
@@ -42,8 +42,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bag.cs" />
+    <Compile Include="Consumable.cs" />
+    <Compile Include="Drawer.cs" />
+    <Compile Include="IAlive.cs" />
+    <Compile Include="IamItem.cs" />
+    <Compile Include="IFood.cs" />
+    <Compile Include="IHaveWeight.cs" />
+    <Compile Include="ISortable.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="Mob.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tiles.cs" />
+    <Compile Include="Weapon.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
