--- a/RougueLikeRPG/RougueLikeRPG/RougueLikeRPG.csproj
+++ b/RougueLikeRPG/RougueLikeRPG/RougueLikeRPG.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tiles.cs" />
+    <Compile Include="Trap.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
